--- a/template/manager.html
+++ b/template/manager.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="d-flex justify-content-center position-fixed top-0 start-50 translate-middle-x mt-2">
-      <div ng-repeat="alert in alerts | filter:{section:'1'}"
+      <div ng-repeat="alert in alerts | filter:({section:'1'}) || filter:({section:'2'})"
         class="alert alert-{{alert.type}} alert-dismissible fade show" role="alert">
         {{ alert.msg }}
         <button type="button" class="btn-close" aria-label="Close" ng-click="alert.close()"></button>
@@ -45,10 +45,11 @@
   <div>
     <section class="vh-100" style="background-color: #eee">
       <div class="container h-100" style="padding-top: 100px">
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-          <div class="accordion-item" ng-repeat="category in categories">
+        
+        <div class="accordion accordion-flush" id="accordionFlushExample" ng-repeat="category in categories">
+          <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
-              <div class="row mt-5">
+              <div class="row mt-3">
                 <div class="col-10">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapse{{$index}}" aria-expanded="false"
@@ -71,7 +72,7 @@
                     <input type="file" ng-model="category.updateImage" class="custom-file-input" id="updatedImage"
                       accept="image/*" />
                     <button class="btn btn-primary" ng-click="saveEdit(category)">
-                      Save
+                      Add
                     </button>
                     <button class="btn btn-secondary" ng-click="cancelEdit(category)">
                       Cancel
@@ -80,83 +81,88 @@
                 </div>
               </div>
             </h2>
+            
             <div id="flush-collapse{{$index}}" class="accordion-collapse collapse"
               aria-labelledby="flush-heading{{$index}}" data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
                 <div class="row flex-nowrap overflow-auto">
                   <div class="col-md-2">
-                    <div class="card" style="width: 14rem">
-                      <i class="bi bi-plus-circle" style="height: 200px; width: 200px"></i>
+                    <div class="card h-70">
+                      <i class="bi bi-plus-circle" style="font-size: 11.5rem;"></i>
                       <div class="card-body d-flex justify-content-center">
                         <div class="card-body text-center">
-                            <button class="btn btn-primary" ng-click="showModal()">
-                                Add Products
-                            </button>
+                          <button class="btn btn-primary" ng-click="showModal()">
+                            Add Products
+                          </button>
                         </div>
                       </div>
 
-                    <div class="modal fade" id="addProductModal" tabindex="-1" role="dialog" aria-labelledby="addProductModalLabel" aria-hidden="true">
-                      <div class="modal-dialog modal-dialog-centered" role="document">
+                      <div class="modal fade" id="addProductModal" tabindex="-1" role="dialog"
+                        aria-labelledby="addProductModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
                           <div class="modal-content">
                             <div class="modal-header">
                               <h5 class="modal-title" id="addProductModalLabel">
                                 Add Product
                               </h5>
-                              <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close" ng-click="hideModal()">
+                              <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"
+                                ng-click="hideModal()">
                               </button>
                             </div>
                             <div class="modal-body">
                               <form ng-submit="submitForm()">
                                 <div class="form-group">
-                                    <label for="productName">Product Name</label>
-                                    <input type="text" class="form-control" id="productName" ng-model="product.name" required>
+                                  <label for="productName">Product Name</label>
+                                  <input type="text" class="form-control" id="productName" ng-model="product.name"
+                                    required>
                                 </div>
                                 <div class="form-group">
-                                    <label for="productDescription">Product Description</label>
-                                    <textarea class="form-control" id="productDescription" ng-model="product.description" rows="3"></textarea>
+                                  <label for="productDescription">Product Description</label>
+                                  <textarea class="form-control" id="productDescription" ng-model="product.description"
+                                    rows="3"></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <label for="productPrice">Product Price Per Unit</label>
-                                    <input type="number" class="form-control" id="productPrice" ng-model="product.price" required>
+                                  <label for="productPrice">Product Price Per Unit</label>
+                                  <input type="number" class="form-control" id="productPrice" ng-model="product.price"
+                                    required>
                                 </div>
                                 <div class="form-group">
                                   <label for="productQuantity">Product Quantity</label>
-                                  <input type="number" class="form-control" id="productQuantity" ng-model="product.quantity" required>
+                                  <input type="number" class="form-control" id="productQuantity"
+                                    ng-model="product.quantity" required>
                                 </div>
                                 <div class="form-group">
                                   <label for="productUnit">Product Unit</label>
                                   <select class="form-control" id="productUnit" ng-model="product.unit">
-                                      <option value="kg">kg</option>
-                                      <option value="ltr">ltr</option>
-                                      <option value="qty">qty</option>
+                                    <option value="kg">kg</option>
+                                    <option value="ltr">ltr</option>
+                                    <option value="qty">qty</option>
                                   </select>
                                 </div>
                                 <div class="form-group">
-                                    <label for="productManufacturingDate">Manufacturing Date</label>
-                                    <input type="date" class="form-control" id="productManufacturingDate" ng-model="product.manufacturingDate">
+                                  <label for="productManufacturingDate">Manufacturing Date</label>
+                                  <input type="date" class="form-control" id="productManufacturingDate"
+                                    ng-model="product.manufacturingDate">
                                 </div>
                                 <div class="form-group">
-                                    <label for="productExpiryDate">Expiry Date</label>
-                                    <input type="date" class="form-control" id="productExpiryDate" ng-model="product.expiryDate">
+                                  <label for="productExpiryDate">Expiry Date</label>
+                                  <input type="date" class="form-control" id="productExpiryDate"
+                                    ng-model="product.expiryDate">
                                 </div>
                                 <div class="form-group">
-                                    <label for="productImage">Product Image</label>
-                                    <input type="file" class="form-control" id="productImage" accept="image/*" ng-model="product.image">
+                                  <label for="productImage">Product Image</label>
+                                  <input type="file" class="form-control" id="productImage" accept="image/*"
+                                    ng-model="product.image">
                                 </div>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                                    Close
-                                </button>
-                                <button type="submit" class="btn btn-primary">Save</button>
-                            </form>
-                            
-                            
+                              </form>
                             </div>
                             <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="hideModal()">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                                ng-click="hideModal()">
                                 Close
                               </button>
                               <button type="button" class="btn btn-primary" ng-click="addProduct(category)">
-                                Save
+                                Add
                               </button>
                             </div>
                           </div>
@@ -164,22 +170,104 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-2">
-                    <div class="card" style="width: 14rem">
-                      <img ng-src="https://10.21.83.174:8000/media/{{ category.category_image }}"
-                        alt="{{ category.category_name }}" width="200" />
+
+                  <div class="col-md-2" ng-repeat="product in products">
+                    <div class="card h-70">
+                      <img ng-src="https://10.21.83.174:8000/media/{{ product.image }}" alt="{{ product.image }}"
+                        class="card-img-top" style="object-fit: cover;">
                       <div class="card-body">
-                        <h5 class="card-title">Pineapple</h5>
-                        <a href="#" class="btn btn-primary">Edit</a>
-                        <a href="#" class="btn btn-primary">Delete</a>
+                        <h5 class="card-title">{{product.product_name}}</h5>
+                        <div ng-if="!product.editMode">
+                          <button class="btn btn-outline-secondary btn-block" type="button"
+                            ng-click="editProduct(product)">
+                            <i class="bi bi-pencil-square"></i> Edit
+                          </button>
+                          <button class="btn btn-outline-secondary btn-block" type="button" ng-click="delProduct(product)">
+                            <i class="bi bi-trash"></i> Del
+                          </button>
+                        </div>
                       </div>
                     </div>
                   </div>
+
+                  <div class="modal fade" id="editProductModal" tabindex="-1" role="dialog"
+                    aria-labelledby="editProductModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="editProductModalLabel">
+                            Edit Product
+                          </h5>
+                          <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"
+                            ng-click="cancelProductEdit(editingProduct)">
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          <form ng-submit="saveProductEditModal()">
+                            <div class="form-group">
+                                <label for="productName">Product Name</label>
+                                <input type="text" class="form-control" id="productName"
+                                    ng-model="editingProduct.updateName" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="productDescription">Product Description</label>
+                                <textarea class="form-control" id="productDescription" ng-model="editingProduct.updateDescription"
+                                    rows="3"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="productPrice">Product Price Per Unit</label>
+                                <input type="number" class="form-control" id="productPrice" ng-model="editingProduct.updatePrice"
+                                    required>
+                            </div>
+                            <div class="form-group">
+                                <label for="productQuantity">Product Quantity</label>
+                                <input type="number" class="form-control" id="productQuantity"
+                                    ng-model="editingProduct.updateQuantity" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="productUnit">Product Unit</label>
+                                <select class="form-control" id="productUnit" ng-model="editingProduct.updateUnit">
+                                    <option value="kg">kg</option>
+                                    <option value="ltr">ltr</option>
+                                    <option value="qty">qty</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="productManufacturingDate">Manufacturing Date</label>
+                                <input type="date" class="form-control" id="productManufacturingDate"
+                                    ng-model="editingProduct.updateMfgDate">
+                            </div>
+                            <div class="form-group">
+                                <label for="productExpiryDate">Expiry Date</label>
+                                <input type="date" class="form-control" id="productExpiryDate"
+                                    ng-model="editingProduct.updateExpDate">
+                            </div>
+                            <div class="form-group">
+                                <label for="productImage">Product Image</label>
+                                <input type="file" class="form-control" id="editingProductImage" accept="image/*"
+                                    ng-model="editingProduct.updateImage">
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                                    ng-click="cancelProductEdit(editingProduct)">
+                                    Close
+                                </button>
+                                <button type="button" class="btn btn-primary" ng-click="saveProductEdit(editingProduct)">
+                                    Save Changes
+                                </button>
+                            </div>
+                        </form>                        
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 </div>
               </div>
             </div>
           </div>
         </div>
+
       </div>
     </section>
   </div>
